--- a/hugo.toml
+++ b/hugo.toml
@@ -5,17 +5,21 @@ theme = "PaperMod"
 
 [params.homeInfoParams]
 Title = "Hi!"
-Content = "I am Zifan Wang (王子凡) and I often go by Atticus. I'm an MIT '26 majoring in (pure) math, with frivolous interests in music, writing, physics, and computer science."
+Content = "I am Zifan Wang (王子凡) and I often go by Atticus. I am an MIT undergrad majoring in (pure) math and interested in music, writing, physics, and computer science."
 
 [[params.socialIcons]]
 name = "email"
 url = "mailto:atticusw@mit.edu"
 
+[[params.socialIcons]]
+name = "facebook"
+url = "https://www.facebook.com/zifan.wang.524/"
+
 
 [[menu.main]]
-identifier = "cv"
-name = "CV"
-url = "/cv/"
+identifier = "resume"
+name = "Résumé"
+url = "/resume/"
 weight = 50
 
 [[menu.main]]
